summative.moria.Moria.scala.error
Compilation error:
Moria:29: error: illegal start of simple expression
while(getThaRock); 
                 ^